--- a/.travis.yml
+++ b/.travis.yml
@@ -11,17 +11,17 @@ script:
   - docker run -e CI=true mariusble/docker-react npm run test
 
 after_success:
-  - docker build -t mariusble/mutli-client ./client
-  - docker build -t mariusble/mutli-nginx ./nginx
-  - docker build -t mariusble/mutli-server ./server
-  - docker build -t mariusble/mutli-worker ./worker
+  - docker build -t mariusble/multi-client ./client
+  - docker build -t mariusble/multi-nginx ./nginx
+  - docker build -t mariusble/multi-server ./server
+  - docker build -t mariusble/multi-worker ./worker
 
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin 
 
-  - docker push mariusble/mutli-client
-  - docker push mariusble/mutli-nginx
-  - docker push mariusble/mutli-server
-  - docker push mariusble/mutli-worker
+  - docker push mariusble/multi-client
+  - docker push mariusble/multi-nginx
+  - docker push mariusble/multi-server
+  - docker push mariusble/multi-worker
 
 
 #deploy:
